Adding tests and admin functionality
